# pymm

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README  README.md  setup.py  sync_with_mcas.sh
examples/: mnist.py
src/components/: CMakeLists.txt
src/components/api/: ado_itf.h  cluster_itf.h  components.h  crypto_itf.h  fabric_itf.h  interfaces.h  itf_ref.h  kvindex_itf.h  kvstore.h  kvstore_itf.h  mcas_itf.h  registrar_memory_direct.h  sample_itf.h
src/components/store/: CMakeLists.txt
src/components/store/hstore/: CMakeLists.txt
src/components/store/hstore/src/: alloc_key.cpp  alloc_key.h  allocator_cc.cpp  allocator_cc.h  allocator_co.cpp  allocator_co.h  allocator_pobj.h  allocator_rc.cpp  allocator_rc.h  as_emplace.cpp  as_emplace.h  as_extend.cpp  as_extend.h  as_pin.cpp  as_pin.h  bad_alloc_cc.cpp  bad_alloc_cc.h  bits_to_ints.cpp  bits_to_ints.h  bucket_aligned.cpp  bucket_aligned.h  bucket_control.cpp  bucket_control.h  bucket_control_unlocked.cpp  bucket_control_unlocked.h  bucket_mutexes.cpp  bucket_mutexes.h  bucket_ref.cpp  bucket_ref.h  bucket_shared_lock.cpp  bucket_shared_lock.h  bucket_unique_lock.cpp  bucket_unique_lock.h  clean_align.h  cond_print.cpp  cond_print.h  construction_mode.cpp  construction_mode.h  content.cpp  content.h  (+179 more)
src/components/store/hstore/unit_test/: CMakeLists.txt  memo_lock.h  pool_open.h  store_map.cpp  store_map.h  test1.cpp  test1s.cpp  test2.cpp  test3.cpp  test4.cpp  testmt.cpp  timer.h
src/components/store/mapstore/: CMakeLists.txt  README.md
src/components/store/mapstore/src/: allocator_adapter.h  map_store.cpp  map_store.h  map_store_env.h.in  map_store_factory.cpp  map_store_factory.h  numa_node_mask.h  pool_instance.cpp  pool_instance.h  pool_session.h  region_memory.h  region_memory_mmap.cpp  region_memory_mmap.h  region_memory_numa.cpp  region_memory_numa.h  region_memory_numa_pin.cpp  region_memory_numa_pin.h
src/components/store/mapstore/unit_test/: CMakeLists.txt  test1.cpp
src/components/store/test/: CMakeLists.txt
src/components/store/test/src/: allocator_efficiency.cpp  dax_address_overlap.cpp  kv_lock.h  make_kvstore.cpp  make_kvstore.h  pool_instance.cpp  pool_instance.h  pool_iterator.cpp  pool_iterator.h  pool_opened.cpp  pool_opened.h  test1.cpp
src/lib/: CMakeLists.txt
src/lib/EASTL/include/EASTL/: allocator.h  allocator_malloc.h  bitset.h  chrono.h  deque.h  fixed_allocator.h  fixed_string.h  fixed_substring.h  fixed_vector.h  heap.h  iterator.h  list.h  map.h  memory.h  optional.h  region_modifications.h  set.h  slist.h  string.h  string_view.h  tracker.h  tuple.h  vector.h
src/lib/EASTL/source/: region_modifications.cpp
src/lib/EASTL/test/: CMakeLists.txt
src/lib/cityhash/: CMakeLists.txt
src/lib/cityhash/cityhash/: .gitignore
src/lib/common/: CMakeLists.txt
src/lib/common/include/: config.h  config.h.in
src/lib/common/perf/: duration_stat.cpp  timer_to_exit.cpp
src/lib/common/src/: component.cc  cpu.cc  crc32.cc  cycles.cc  dump_utils.cc  env.cpp  fd_locked.cpp  fd_open.cpp  get_cpu_mask_from_string.cpp  memory.cc  memory_mapped.cpp  net.cc  rand.cc  str_utils.cc  time.cc  utils.cc
src/lib/common/unit_test/: CMakeLists.txt  test1.cpp
src/lib/libccpm/: CMakeLists.txt
src/lib/libccpm/src/: area_ctl.cpp  area_ctl.h  area_top.cpp  area_top.h  atomic_word.cpp  atomic_word.h  cca.cpp  ccpm.cpp  container_cc.cpp  doubt.cpp  doubt.h  element_state.h  list_item.h  log.cpp  logging.h  tracker_log.cpp  value_tracked.cpp
src/lib/libccpm/unit_test/: CMakeLists.txt  profiler.h  store_map.cpp  test1.cpp  test2.cpp  test3.cpp  test5.cpp  test6.cpp  test7.cpp
src/lib/libmm/: CMakeLists.txt  HOWTO.md
src/lib/libmm/src/: alloc-override.c  mm_wrapper.cpp  mm_wrapper.h  test_prog.cpp
src/lib/libmm/unit_test/: CMakeLists.txt  test1.cpp
src/lib/libnupm/: CMakeLists.txt
src/lib/libnupm/src/: arena.h  arena_dev.cpp  arena_dev.h  arena_fs.cpp  arena_fs.h  arena_none.h  avl_malloc.cpp  avl_tree.cpp  dax_data.h  dax_manager.cpp  filesystem.h  heap_allocator.cpp  lazy_region.cpp  mcas_mod.cpp  nd_utils.cpp  rampant_alloc.cpp  rc_alloc_avl.cpp  rc_alloc_lb.cpp  region.h  region_modifications.cpp  rpmalloc.c  slab.cpp  space_opened.cpp  space_registered.cpp  stacktrace.cpp  tx_cache.cpp
src/lib/libnupm/unit_test/: CMakeLists.txt  test1.cpp  test2.cpp
src/lib/libpmem/: CMakeLists.txt  pmem.h
src/lib/libpmem/common/: os.h  os_dimm_ndctl.c  out.c  util.h
src/lib/libpmem/x86_64/: avx.h  memcpy_memset.h
src/lib/ndctl/: CMakeLists.txt
src/lib/rapidjson/: CMakeLists.txt
src/lib/rapidjson/doc/: CMakeLists.txt
src/mm/ccpm/: CMakeLists.txt
src/mm/ccpm/src/: mm_plugin.cpp
src/mm/jemalloc/: CMakeLists.txt
src/mm/jemalloc/jemalloc-source/: CMakeLists.txt  README.md
src/mm/jemalloc/src/: avl_malloc.h  avl_tree.h  logging.h  mm_plugin_jemalloc.cpp  mr_traits.h  slab.h
src/mm/passthru/: CMakeLists.txt
src/mm/passthru/src/: mm_plugin_passthru.c
src/mm/rcalb/: CMakeLists.txt
src/mm/rcalb/src/: avl_malloc.h  avl_tree.h  lazy_region.h  logging.h  mappers.h  mm_plugin_rcalb.cpp  rc_alloc_avl.cpp  rc_alloc_avl.h  rc_alloc_lb.cpp  rc_alloc_lb.h  region.h  safe_print.h  slab.h  stack.h
src/python/pymm/: #sample-pytorch.py#  CMakeLists.txt  LICENSE  README.md  __init__.py  bytes.py  check.py  checkpoint.py  demo.py  dictionary.py  dlpack_array.py  float_number.py  integer_number.py  linkedlist.py  memoryresource.py  metadata.py  ndarray.py  pymm-init.py  pymm-shell-init.py  pymm-shell.in  pymmtest.py  sample.py  setup.py.in  shelf.py  string.py  torch_tensor.py
src/python/pymm/core/: #memory_providers.h#  list_type.cc  memory_providers.h  memory_resource_type.cc  meta.fbs  metadata.h  ndarray_helpers.cc  ndarray_helpers.h  pymm_config.h.in  pymm_metadata.cc  pymm_module.cc  transient_memory.cc  txbits.h  type.template
src/python/pymm/modified_lackey/: HOWTO.run  lk_main.c
src/python/pymm/testing/: casting.py  foo.py  integers.py  linkedlist.py  load_save.py  log.out  recovery.py  recovery_B.py  run.sh  starter.py  transactions.py  transactions_reveal.py
(+1055 files in other folders)
