cmake_minimum_required (VERSION 3.5.1 FATAL_ERROR)

add_compile_options(-pedantic -Wall -Wextra -Werror -Wcast-align -Wcast-qual -Wconversion -Weffc++ -Wformat=2 -Wold-style-cast -Wredundant-decls -Wshadow -Wtype-limits -Wunused-parameter -Wwrite-strings)

if(BOOTSTRAP_DEPS)
else(BOOTSTRAP_DEPS)
  add_subdirectory(api)
  add_subdirectory(store)
endif(BOOTSTRAP_DEPS)
